--- a/cavanhagan.html
+++ b/cavanhagan.html
@@ -62,6 +62,9 @@
         padding: 10px 35px;
         box-shadow: inset 0 1px 3px #759ef0;
       }
+      p {
+        color: hsl(220, 10%, 45%);
+      }
     </style>
     <script language="JavaScript">
       function calculate() {
